@@ -367,6 +367,12 @@ ILboolean ilLoadMngL(const void *Lump, ILuint Size);
 ILboolean ilSaveMng(ILconst_string FileName);
 ILuint    ilSaveMngF(ILHANDLE File);
 ILuint    ilSaveMngL(void *Lump, ILuint Size);
+ILboolean ilIsValidMp3(ILconst_string FileName);
+ILboolean ilIsValidMp3F(ILHANDLE File);
+ILboolean ilIsValidMp3L(const void *Lump, ILuint Size);
+ILboolean ilLoadMp3(ILconst_string FileName);
+ILboolean ilLoadMp3F(ILHANDLE File);
+ILboolean ilLoadMp3L(const void *Lump, ILuint Size);
 ILboolean ilLoadPcd(ILconst_string FileName);
 ILboolean ilLoadPcdF(ILHANDLE File);
 ILboolean ilLoadPcdL(const void *Lump, ILuint Size);
